# pgeom

./: Cargo.toml
models/gun/: .Handgun_obj.mtl.icloud  .Handgun_obj.obj.icloud
src/: lib.rs  material.rs  mesh.rs  obj.rs  types.rs  utils.rs
src/shapes/: arrow.rs  cone.rs  cylinder.rs  grid.rs  mod.rs  rectangle.rs  sphere.rs
