[package]
name = "pgeom"
version = "0.1.0"
authors = ["pvdklei <pepijnvanderklei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genmesh = "0.6.2"
glm = { version =  "0.11.0", package = "nalgebra-glm" }
unzip-n = "0.1.2"
tobj = "3.0.0"
na = { package = "nalgebra", version = "0.26.2" }

